[project]
name = "memoized-llm"
version = "0.1.0"
description = "Memoized LLM calls"
authors = [{ name = "Francesco", email = "francesco@bruschi.dev" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "memoizer @ git+https://github.com/francesco/memoizer",
    "llm"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"